--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "antd": "^4.12.3",
+    "axios": "^0.21.1",
+    "date-fns": "^2.17.0",
+    "firebase": "^8.2.9",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "next": "10.0.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "^17.0.1",
+    "react-dom": "17.0.1",
+    "react-live-clock": "^5.0.16",
+    "react-moment": "^1.1.1",
+    "react-query": "^3.9.8",
+    "react-to-pdf": "0.0.13"
   }
 }
