--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 TWILIO_ACCOUNT_SID = AC1de16b2d1e99ccdb8c5121cc4768c072
 TWILIO_AUTH_TOKEN = 7847c4059f32975d5a96f0e0f3b3bc42
 TWILIO_SERVICE_ID = VA606b205eb88560386bf90ab712c49b65
-NEXT_PUBLIC_AXIOS_BASE_URL= http://localhost:8000
+NEXT_PUBLIC_AXIOS_BASE_URL= https://her-shreersc-express-server.herokuapp.com
 
 NEXT_PUBLIC_FIREBASE_API_KEY = AIzaSyCbyjugjxQ-O681Chw2-6P1AFV0GTdF8Q0
 NEXT_PUBLIC_AUTH_DOMAIN =hreersc-dev-3261f.firebaseapp.com
